--- a/public/panel.html
+++ b/public/panel.html
@@ -16,11 +16,11 @@
 
 <div class="mt-2 d-flex justify-content-center">
     <button class="btn btn-primary m-2" id="btn-view-stream">View Live Stream</button>
-    <button class="btn btn-danger m-2" id="btn-end-stream" style="display: none;">End Live Stream</button>
+    <button class="btn btn-danger m-2" id="btn-end-stream" style="display: none;">Stop Viewing</button>
 </div>
 
 <div id="stream-container" style="display: none; height: 70vh; width: 100%;">
-    <rtk-meeting id="rtk-meeting-viewer" style="height: 100%; width: 100%;"></rtk-meeting>
+    <video id="stream-video" style="height: 100%; width: 100%;" autoplay playsinline controls muted></video>
 </div>
 
 <hr/>
@@ -36,12 +36,8 @@
 </body>
 </html>
 
-<script type="module">
-    import { defineCustomElements } from 'https://cdn.jsdelivr.net/npm/@cloudflare/realtimekit-ui@1.0.5/loader/index.es2017.js';
-    defineCustomElements();
-</script>
-<script src="https://cdn.jsdelivr.net/npm/@cloudflare/realtimekit@1.2.3/dist/browser.js"></script>
 <script src="./assets/js/jquery.min.js"></script>
+<script src="./assets/js/stream-webrtc.js"></script>
 <script src="./assets/js/script.js"></script>
 <script src="./assets/js/sweetalert2.min.js"></script>
 <script src="./assets/js/growl-notification.min.js"></script>
